Updated All Publicatins link

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <ul class="dropdown-menu">
                             <li><a onclick="javascript:reset_menus();$('#tab-publications-content').show();"
                                     href="#publications">Selected</a></li>
-                            <li><a href="publications/index.html">All</a></li>
+                            <li><a href="pub.html">All</a></li>
                         </ul>
                     </li>
                     <li class="page-scroll">
