--- a/index.html
+++ b/index.html
@@ -422,7 +422,8 @@
                         </ul>
                     </li>
                     <li class="page-scroll">
-                        <a onclick="javascript:reset_menus();$('#tab-news-content').show();" href="#news">News</a>
+                        <a onclick="javascript:reset_menus();$('#tab-news-content').show();" 
+                        href="#news">News</a>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
