--- a/index.html
+++ b/index.html
@@ -240,6 +240,10 @@
         .Scriptcontent {
             line-height: 28px;
         }
+         
+        .lead {
+            text-align: justify;
+        }
 
         .ScriptHeader h1 {
             font-family: "brandon-grotesque", "Brandon Grotesque", "Source Sans Pro", "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
@@ -495,7 +499,7 @@
             </div>
             <div align="left" class="col-md-4">
                 <h2>Anirudh Paranjothi
-                    <h5><i>Ph.D. in computer science from the University of Oklahoma</i></h5>
+                    <h5><i>PhD in computer science from the University of Oklahoma</i></h5>
                 </h2>
 
                 <h4>Assistant Professor<br>
@@ -507,7 +511,7 @@
                         href="mailto:anirudh.paranjothi@okstate.edu">anirudh.paranjothi@okstate.edu</a>
                     Directions: <a target="_blank" href="https://map.okstate.edu/?id=1842#!m/521914">Map</a>
                 </h4>
-                <h4><i>Expertise: Areas of networking, security, and computing, with an emphasis on wireless systems</i>
+                <h4>Expertise: Areas of networking, security, and computing, with an emphasis on wireless systems
                     <br>
                 </h4>
 
@@ -760,9 +764,9 @@
                     <hr class="star-primary">
 
                     <p class="lead">
-                        Dr. Paranjothi received Ph.D. in computer science from the <a target="_blank"
-                            href="https://www.ou.edu">University of Oklahoma</a>, an M.S. in computer science from <a
-                            target="_blank" href="https://www.tamu.edu">Texas A&M University</a>, and a B.S. degree in
+                        Dr. Paranjothi received PhD in computer science from the <a target="_blank"
+                            href="https://www.ou.edu">University of Oklahoma</a>, an MS in computer science from <a
+                            target="_blank" href="https://www.tamu.edu">Texas A&M University</a>, and a Bachelor's degree in
                         computer science from <a target="_blank" href="https://www.annauniv.edu">Anna University</a>.
                         His primary research interests are in the areas of networking, security, and computing, with an
                         emphasis on wireless systems. The overarching motivation of Anirudh's research is to enhance
@@ -1034,8 +1038,8 @@
             <hr>
             <h3 style="font-weight: bold;">Research Positions</h3>
             <p class="lead">We have <b>multiple research positions</b> in <b>data science</b>, <b>social network
-                    analysis</b>, and <b>computational biology</b> open for enthusiastic <b>graduate</b> (M.S. and
-                Ph.D.) and <b>undergraduate</b> students. <br> <br> Email <i>anirudh.paranjothi@okstate.edu</i> along
+                    analysis</b>, and <b>computational biology</b> open for enthusiastic <b>graduate</b> (MS and
+                PhD) and <b>undergraduate</b> students. <br> <br> Email <i>anirudh.paranjothi@okstate.edu</i> along
                 with CV to get more details.</p>
 
             <div class="border-top my-3"></div>
@@ -1068,7 +1072,7 @@
                         data-holder-rendered="true">
                     <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/sadia-kamal-9ba392171/"
                             target="_blank" style="color: #dd7564">Abinash Borah</a></h4>
-                    <p class="text-muted fs-5">Ph.D</p>
+                    <p class="text-muted fs-5">PhD</p>
                 </div>
 
                 <div class="col-lg-3">
@@ -1078,7 +1082,7 @@
                         data-holder-rendered="true">
                     <h4><a class="text-decoration-none" href="https://www.tanvirfarhan.com" target="_blank"
                             style="color: #dd7564">Adele Gideon</a></h4>
-                    <p class="text-muted fs-5">Ph.D</p>
+                    <p class="text-muted fs-5">PhD</p>
                 </div>
 
 
@@ -1089,7 +1093,7 @@
                         data-holder-rendered="true">
                     <h4><a class="text-decoration-none" href="https://copotronicrifat.github.io/" target="_blank"
                             style="color: #dd7564">Mohammad Suratwala</a></h4>
-                    <p class="text-muted fs-5">MS. (CS)</p>
+                    <p class="text-muted fs-5">MS (CS)</p>
                 </div>
 
                 <div class="col-lg-3">
@@ -1114,7 +1118,7 @@
                         data-holder-rendered="true">
                     <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/samuel-fipps-04b9411b6/"
                             target="_blank" style="color: #dd7564">Abdulla Karjikar</a></h4>
-                    <p class="text-muted fs-5">M.S. (CS)</p>
+                    <p class="text-muted fs-5">MS (CS)</p>
                 </div>
 
                 <div class="col-lg-3">
@@ -1302,12 +1306,12 @@
     .gsc_g_hist_wrp {
         padding-top: 10px !important;
     }
-</style>
+</style>    
 
 <script>
     jQuery.fn.liScroll = function (settings) {
         settings = jQuery.extend({
-            travelocity: 0.02
+            travelocity: 0.05
         }, settings);
         return this.each(function () {
             var $strip = jQuery(this);
@@ -1343,3 +1347,7 @@
     });
 
 </script>
+
+
+
+
