Added bold color to running banner

--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
                 float: none;
             }
 
+
         }
     </style>
     <!-- Navigation -->
@@ -486,9 +487,10 @@
     <section name="home" id="home" style="margin-top:40px">
         <div class="container">
             <div>
-                <marquee style="font-size: 20px;color:orange;">Graduate or undergraduate students looking for research
+                <marquee style="font-size: 20px; color:
+                #fb5c04;font-weight: bolder;">Graduate or undergraduate students looking for research
                     work. Please contact me at ( <a
-                        href="mailto:anirudh.paranjothi@okstate.edu">anirudh.paranjothi@okstate.edu </a>) </marquee>
+                        href="mailto:anirudh.paranjothi@okstate.edu" style="color: black;">anirudh.paranjothi@okstate.edu </a>) </marquee>
                 <br><br>
             </div>
             <div align="left" class="col-md-3">
