Made Header bold

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            Home<span class="caret"></span></a>
+                            <b>Home</b><span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a onclick="javascript:reset_menus();$('#tab-intro-content').show();"
                                     href="#intro">Introduction</a></li>
@@ -428,11 +428,11 @@
                     </li>
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#tab-news-content').show();" 
-                        href="#news">News</a>
+                        href="#news"><b>News</b></a>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                            Publications<span class="caret"></span></a>
+                            <b>Publications</b><span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a onclick="javascript:reset_menus();$('#tab-publications-content').show();"
                                     href="#publications">Selected</a></li>
@@ -441,11 +441,11 @@
                     </li>
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#tab-courses-content').show();"
-                            href="#courses">Courses</a>
+                            href="#courses"><b>Courses</b></a>
                     </li>
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#tab-service-content').show();"
-                            href="#research_position">Student Service</a>
+                            href="#research_position"><b>Student Service</b></a>
                     </li>
                     <!-- <li class="page-scroll">
                             <a onclick="javascript:reset_menus();$('#tab-service-content').show();" href="#service">Awards</a>
@@ -460,7 +460,7 @@
 
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#tab-contact-content').show();"
-                            href="#contact">Contact</a>
+                            href="#contact"><b>Contact</b></a>
                     </li>
                     <li class="page-scroll">
                         <a onclick="javascript:reset_menus();$('#bs-example-navbar-collapse-2').toggle();">
