Corrected info on the page

--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
             <p class="lead">I am Assistant Professor of <strong><a href="http://www.cs.okstate.edu/index.html"
                         class="text-decoration-none website_link">Department of Computer Science</a></strong> at the
                 <strong><a href="https://go.okstate.edu/" class="text-decoration-none website_link">Oklahoma State
-                        University</a></strong>. I lead <i>The Complex Systems Lab</i> at OSU
+                        University</a></strong>. I lead <b>ANTS: Advanced Networking and Telecommunication Security Research Lab</b> at OSU
             </p>
             <p class="lead">My research area in general is applied machine learning for real world complex systems with
                 large scale networks and text data to model prediction and forecasting problems. Applications include
@@ -1057,7 +1057,7 @@
                         height="140"
                         src="https://cas.okstate.edu/department_of_computer_science/site_files/images/staff_faculty_images/paranjothi_headshot.jpg"
                         data-holder-rendered="true">
-                    <h4 class="okstate_orange">Anirudh Paranjothi</h4>
+                    <h4 class="okstate_orange"><a href="https://cas.okstate.edu/department_of_computer_science/directory/bio/paranjothi_bio.html" style="color: #dd7564">Anirudh Paranjothi</a></h4>
                     <p class="text-muted fs-4">(PI)</p>
                     <hr>
 
@@ -1082,7 +1082,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.tanvirfarhan.com" target="_blank"
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/gideon-adele/" target="_blank"
                             style="color: #dd7564">Adele Gideon</a></h4>
                     <p class="text-muted fs-5">PhD</p>
                 </div>
@@ -1093,7 +1093,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://copotronicrifat.github.io/" target="_blank"
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/mosuratwala/" target="_blank"
                             style="color: #dd7564">Mohammad Suratwala</a></h4>
                     <p class="text-muted fs-5">MS (CS)</p>
                 </div>
@@ -1103,8 +1103,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="#" target="_blank" style="color: #dd7564">Abhishek Kumar,
-                            MS</a></h4>
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/abhishekkumar1110/" target="_blank" style="color: #dd7564">Abhishek Kumar</a></h4>
                     <p class="text-muted fs-5">MS (CS)</p>
                 </div>
             </div>
@@ -1118,7 +1117,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/samuel-fipps-04b9411b6/"
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/abdullakarjikar/"
                             target="_blank" style="color: #dd7564">Abdulla Karjikar</a></h4>
                     <p class="text-muted fs-5">MS (CS)</p>
                 </div>
@@ -1128,7 +1127,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/brenner-little-589a8b21b/"
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/quentin-koeninger-a77b35250/"
                             target="_blank" style="color: #dd7564">Quentin Koeninger</a></h4>
                     <p class="text-muted fs-5">BS (Honors)</p>
                 </div>
@@ -1138,7 +1137,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="#" target="_blank" style="color: #dd7564">Morton
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/morton-t/" target="_blank" style="color: #dd7564">Morton
                             Thomas</a></h4>
                     <p class="text-muted fs-5"> BS (Honors Thesis)</p>
                 </div>
@@ -1162,7 +1161,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/jade-gullic-8995451b9/"
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/reeceharrel/"
                             target="_blank" style="color: #dd7564">Reece Harrel</a></h4>
                     <p class="text-muted fs-5">BS (Honors)</p>
                 </div>
@@ -1172,7 +1171,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/hajarepd/" target="_blank"
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/megha-jamloki-a852061ab/" target="_blank"
                             style="color: #dd7564">Megha Jamloki</a></h4>
                     <p class="text-muted fs-5">MS</p>
                 </div>
@@ -1182,7 +1181,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/hajarepd/" target="_blank"
+                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/anirudhmahajan05/" target="_blank"
                             style="color: #dd7564">Anirudh Mahajan</a></h4>
                     <p class="text-muted fs-5">MS</p>
                 </div>
@@ -1191,7 +1190,7 @@
                         style="border-radius: 60px;"
                         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOgmC9gctcfK0gOeLprrO9OCbzQnByigm5wgvoIF2wdg&s"
                         data-holder-rendered="true">
-                    <h4><a class="text-decoration-none" href="https://www.linkedin.com/in/hajarepd/" target="_blank"
+                    <h4><a class="text-decoration-none" href="#" target="_blank"
                             style="color: #dd7564">Shashank Pola</a></h4>
                     <p class="text-muted fs-5">MS</p>
                 </div>
