--- a/index.html
+++ b/index.html
@@ -1058,7 +1058,7 @@
                         src="https://cas.okstate.edu/department_of_computer_science/site_files/images/staff_faculty_images/paranjothi_headshot.jpg"
                         data-holder-rendered="true">
                     <h4 class="okstate_orange"><a href="https://cas.okstate.edu/department_of_computer_science/directory/bio/paranjothi_bio.html" style="color: #dd7564">Anirudh Paranjothi</a></h4>
-                    <p class="text-muted fs-4">(PI)</p>
+                    <p class="text-muted fs-4">Principal Investigator</p>
                     <hr>
 
                 </div>
