--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             </div>
 
 
-            <div id="news" tyle="text-align: left" class="col-md-2">&nbsp;
+            <div id="news" style="text-align: left" class="col-md-2">&nbsp;
                 <section style="margin-top: -20px;">
                     <div class="rt-container">
                         <div class="col-md-4">
@@ -991,10 +991,6 @@
     </section>
 
 
-
-
-
-
     <!-- Courses Section -->
     <section name="courses" id="courses">
         <div class="container lead">
@@ -1016,7 +1012,7 @@
                                 to Computer Security</a> (Summer)</li>
                         <li><span class="label label-default">CS5070</span> <a target="_blank"
                                 href="http://catalog.okstate.edu/search/?search=+Seminar+and+Special+Problems+%28+Independent+Study%29">Seminar
-                                and Special Problems </a>( Independent Study)</li>
+                                and Special Problems </a>(Independent Study)</li>
                         <li><span class="label label-success">CS4283</span> <a
                                 href="http://catalog.okstate.edu/search/?search=Computer+Networks">Computer Networks</a>
                             (Fall) </li>
@@ -1299,9 +1295,13 @@
         empty-cells: show;
     }
 
+    .navbar-default .navbar-nav>li>a {
+    font-size: 15px;
+}
+
     body,
     td {
-        font-size: 13px;
+        /* font-size: 13px; */
         font-family: Arial, sans-serif;
         line-height: 1.24;
     }
