--- a/pub.html
+++ b/pub.html
@@ -401,7 +401,7 @@
                         <ul class="dropdown-menu">
                             <li><a onclick="javascript:reset_menus();$('#tab-intro-content').show();"
                                     href="index.html#intro">Introduction</a></li>
-                            <li><a href="index.htmlbio.html">Biography</a></li>
+                            <li><a href="index.html#bio.html">Biography</a></li>
                             <li><a href="cv.html">CV (Web)</a></li>
                             <li><a target="_blank" href="cv.pdf">CV (PDF)</a></li>
                         </ul>
@@ -948,9 +948,13 @@
         empty-cells: show;
     }
 
+    .navbar-default .navbar-nav>li>a {
+    font-size: 15px;
+}
+
     body,
     td {
-        font-size: 13px;
+        /* font-size: 13px; */
         font-family: Arial, sans-serif;
         line-height: 1.24;
     }
