Added reserach positions

--- a/index.html
+++ b/index.html
@@ -1039,8 +1039,8 @@
             <div class="border-top my-3"></div>
             <hr>
             <h3 style="font-weight: bold;">Research Positions</h3>
-            <p class="lead">We have <b>multiple research positions</b> in <b>data science</b>, <b>social network
-                    analysis</b>, and <b>computational biology</b> open for enthusiastic <b>graduate</b> (MS and
+            <p class="lead">We have <b>multiple research positions</b> in <b>Vehicular Networks</b>, <b>Network Security</b>,
+                <b>Edge Computing</b>, <b>IoT, </b><b>6G and beyond</b> open for enthusiastic <b>graduate</b> (MS and
                 PhD) and <b>undergraduate</b> students. <br> <br> Email <i>anirudh.paranjothi@okstate.edu</i> along
                 with CV to get more details.</p>
 
